--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@mdi/font": "^7.4.47",
+    "vue": "^3.5.13",
+    "vuetify": "^3.8.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
+    "sass-embedded": "^1.87.0",
     "vite": "^6.3.1"
   }
 }
