--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "flatpickr": "^4.6.13",
     "vue": "^3.5.13",
     "vuetify": "^3.8.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
     "sass-embedded": "^1.87.0",
-    "vite": "^6.3.4"
+    "vite": "^6.3.5"
   }
 }
