--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "flatpickr": "^4.6.13",
+    "html2canvas": "^1.4.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vuetify": "^3.8.3"
